--- a/index.html
+++ b/index.html
@@ -379,11 +379,11 @@
     <section class="intro">
       <h1 class="lang-en">
         Real automations I've shipped for ecommerce teams.<br/>
-        <span>Dashboards, monitoring, alerts, no fluff.</span>
+        <span>Dashboards, monitoring, alerts</span>
       </h1>
       <h1 class="lang-ar">
         شغل أوتوميشن حقيقي شغال مع ستورز فعلية.<br/>
-        <span>ريبورتات، مراقبة، تنبيهات. مفيش كلام فاضي.</span>
+        <span>ريبورتات، مراقبة، تنبيهات</span>
       </h1>
 
       <p class="lead lang-en">
@@ -398,10 +398,10 @@
       </p>
 
       <p class="lead lang-en">
-        I work fast, directly with owners / marketing leads / ops. No agency drama.
+        I work fast, directly with owners / marketing leads
       </p>
       <p class="lead lang-ar">
-        بشتغل مباشرة مع صاحب البزنس أو الهيد بتاع الماركتينج / الأوبس. مافيش بيروقراطية.
+        بشتغل مباشرة مع صاحب البزنس أو الهيد بتاع الماركتينج
       </p>
     </section>
 
@@ -660,8 +660,7 @@
           </div>
         </div>
 
-        <!-- sales screen Laravel -->
-        <div class="proj-card">
+         <div class="proj-card">
           <div class="proj-topline">
             <div class="proj-name lang-en">Automation sales screen (Laravel)</div>
             <div class="proj-name lang-ar">شاشة مبيعات لحظية (لارافيل)</div>
@@ -720,7 +719,136 @@
       </div>
     </section>
 
-    <!-- CATEGORY 5: Testing & Quality -->
+    <!-- NEW CATEGORY 5: Customer Messaging & Follow-ups -->
+    <section class="category-block">
+      <div class="cat-head">
+        <div class="lang-en">Customer Messaging & Follow-ups</div>
+        <div class="lang-ar">فلوهات العملاء و المتابعات</div>
+
+        <div class="cat-note lang-en">Save time, reply faster</div>
+        <div class="cat-note lang-ar">توفر وقتك و ترد أسرع</div>
+      </div>
+
+      <div class="projects-grid">
+        <!-- Auto-reply flows -->
+        <div class="proj-card">
+          <div class="proj-topline">
+            <div class="proj-name lang-en">Auto-reply flows (WhatsApp / IG / FB)</div>
+            <div class="proj-name lang-ar">فلوهات رد تلقائي (واتساب / إنستجرام / فيسبوك)</div>
+            <div class="proj-pill">Messaging</div>
+          </div>
+
+          <div class="proj-desc lang-en">
+            Smart autoresponders that answer FAQs, collect name/phone/city,
+            qualify leads, and route to the right agent. Working hours logic + handover to human.
+          </div>
+          <div class="proj-desc lang-ar">
+            ردود تلقائية ذكية: تجاوب الأسئلة الشائعة، تجمع الاسم/التليفون/المدينة،
+            تأهل العميل، وتحوّل لأفضل مسئول. فيها مواعيد عمل و Handover للبشري.
+          </div>
+
+          <div class="proj-meta">
+            <div class="proj-meta-title lang-en">Tech:</div>
+            <div class="proj-meta-title lang-ar">التقنية:</div>
+            <ul class="meta-list">
+              <li>WhatsApp Cloud API / Meta Graph</li>
+              <li>Instagram & Facebook DMs</li>
+              <li>N8N Workflows / Python</li>
+              <li>Dialog branching & NLP</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Email follow-ups -->
+        <div class="proj-card">
+          <div class="proj-topline">
+            <div class="proj-name lang-en">Email follow-ups & sequences</div>
+            <div class="proj-name lang-ar">متابعات الإيميل و سِيكوانس</div>
+            <div class="proj-pill">Follow-up</div>
+          </div>
+
+          <div class="proj-desc lang-en">
+            Post-purchase check-ins, abandoned cart nudges, failed payment recovery,
+            and NPS review requests. All personalized and timed automatically.
+          </div>
+          <div class="proj-desc lang-ar">
+            رسائل متابعة بعد الشراء، تذكير سلة متروكة، استرجاع دفع فاشل،
+            وطلب تقييم/ريفيو. كله بيرسونلايزد وبتوقيت تلقائي.
+          </div>
+
+          <div class="proj-meta">
+            <div class="proj-meta-title lang-en">Tech:</div>
+            <div class="proj-meta-title lang-ar">التقنية:</div>
+            <ul class="meta-list">
+              <li>Gmail API / SMTP</li>
+              <li>WooCommerce & Shopify webhooks</li>
+              <li>Google Sheets CRM</li>
+              <li>N8N / Python schedulers</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Lead capture & CRM sync -->
+        <div class="proj-card">
+          <div class="proj-topline">
+            <div class="proj-name lang-en">Lead capture & CRM sync</div>
+            <div class="proj-name lang-ar">تجميع الليدز و ربط الـCRM</div>
+            <div class="proj-pill">Leads</div>
+          </div>
+
+          <div class="proj-desc lang-en">
+            Collect leads from ads, DMs, website forms, and WhatsApp.
+            Deduplicate, score, assign to reps, and track status in Sheets/Notion/CRM.
+          </div>
+          <div class="proj-desc lang-ar">
+            نجمع الليدز من الإعلانات و الرسائل و الفورمات و الواتساب.
+            نشيل التكرار، ندي سكور، نوزّع على السيلز، ونتابع الحالة في Sheets/Notion/CRM.
+          </div>
+
+          <div class="proj-meta">
+            <div class="proj-meta-title lang-en">Tech:</div>
+            <div class="proj-meta-title lang-ar">التقنية:</div>
+            <ul class="meta-list">
+              <li>Meta Lead Ads / Webhooks</li>
+              <li>Google Sheets / Notion API</li>
+              <li>Discord notifications</li>
+              <li>N8N routers</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- SLA & inbox monitor -->
+        <div class="proj-card">
+          <div class="proj-topline">
+            <div class="proj-name lang-en">Inbox monitor & SLA alerts</div>
+            <div class="proj-name lang-ar">مراقبة الإيميل و تنبيه الـSLA</div>
+            <div class="proj-pill">Ops</div>
+          </div>
+
+          <div class="proj-desc lang-en">
+            Watches shared inboxes for new tickets, flags overdue replies,
+            escalates VIP customers, and posts daily response-time reports.
+          </div>
+          <div class="proj-desc lang-ar">
+            بيراقب صناديق البريد المشتركة، ينبه عن رد متأخر،
+            يرفع عملاء VIP، ويبسّط تقرير يومي بزمن الاستجابة.
+          </div>
+
+          <div class="proj-meta">
+            <div class="proj-meta-title lang-en">Tech:</div>
+            <div class="proj-meta-title lang-ar">التقنية:</div>
+            <ul class="meta-list">
+              <li>Gmail API / Labels</li>
+              <li>Discord / WhatsApp alerts</li>
+              <li>Auto-assign & SLAs</li>
+              <li>N8N Workflows</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CATEGORY 6: Testing & Quality -->
     <section class="category-block">
       <div class="cat-head">
         <div class="lang-en">Testing & Quality</div>
@@ -731,7 +859,6 @@
       </div>
 
       <div class="projects-grid">
-        <!-- site test bot -->
         <div class="proj-card">
           <div class="proj-topline">
             <div class="proj-name lang-en">Automation test site bot</div>
@@ -761,7 +888,7 @@
       </div>
     </section>
 
-    <!-- CATEGORY 6: Alerts & Notifications -->
+    <!-- CATEGORY 7: Alerts & Notifications -->
     <section class="category-block">
       <div class="cat-head">
         <div class="lang-en">Alerts & Notifications</div>
@@ -845,11 +972,10 @@
       </div>
       <div style="margin-top:.5rem;color:var(--text-dim);">
         Gmail : gminamamdouh@gmail.com
-
       </div>
     </footer>
 
-  </div><!-- /wrapper -->
+  </div>
 
 <script>
   // language toggle logic
