--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
     <header>
       <div class="left-head">
         <div class="avatar">
-          <img src="mina.jpeg" alt="Mina Mamdouh">
+          <img src="1759163110822.png" alt="Mina Mamdouh">
         </div>
         <div class="me-lines">
           <div class="me-name">Mina Mamdouh</div>
