--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <title>Mina Mamdouh – Automation Projects</title>
+<style>
+  /* Fix for AOS content disappearing locally */
+  [data-aos] {
+    opacity: 1 !important;
+    transform: none !important;
+  }
+</style>
 
   <!-- Animation Library -->
-  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
-
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <style>
     :root {
@@ -349,7 +355,7 @@
     <header>
       <div class="left-head">
         <div class="avatar">
-          <img src="Mina.jpeg" alt="Mina Mamdouh">
+          <img src="Mina.png" alt="Mina Mamdouh">
         </div>
         <div class="me-lines">
           <div class="me-name">Mina Mamdouh</div>
