Change avatar image and style CTA buttons
Updated the image source and modified the call-to-action button styles.

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     <header>
       <div class="left-head">
         <div class="avatar">
-          <img src="Mina.png" alt="Mina Mamdouh">
+          <img src="mina.jpeg" alt="Mina Mamdouh">
         </div>
         <div class="me-lines">
           <div class="me-name">Mina Mamdouh</div>
@@ -416,10 +416,12 @@
         بشتغل مباشرة مع صاحب البزنس أو الهيد بتاع الماركتينج
       </p>
 
-      <div class="head-cta-row" style="margin-top:.5rem;">
-        <a class="btn-mail lang-en" href="#projectsTop">View projects ↓</a>
-        <a class="btn-mail lang-ar" href="#projectsTop">شوف المشاريع ↓</a>
-      </div>
+      <div class="head-cta-row" style="margin-top:.5rem; display:flex; justify-content:center; transform:translateX(100px); gap:1rem;">
+    <a class="btn-mail lang-en" href="#projectsTop">View projects</a>
+    <a class="btn-mail lang-ar" href="#projectsTop">شوف المشاريع</a>
+     </div>
+
+
     </section>
 
     <!-- CATEGORY 1: Account & Balance -->
